Ajustes nas dpendências; criado pacote excecao; adicição de Handler para nova exceção de valor não encontrado; remoção do projeto jdbc  para não confundir; adicção de testes unitários, e2e e de integração como exemplo de implementação.